--- a/.github/workflows/block-merge.yml
+++ b/.github/workflows/block-merge.yml
@@ -21,7 +21,7 @@ jobs:
           
       - name: Set Pull Request Status
         uses: actions/github-script@v6
-        if: steps.check_label.outputs.TO_BLOCK == 'yes'
+        if: ${{ steps.check_label.outputs.TO_BLOCK == 'yes' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
