--- a/.github/workflows/block-merge.yml
+++ b/.github/workflows/block-merge.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           script: |
             const pullRequest = context.payload.pull_request
-            const repository = context.repo()
+            const repository = context.repo
             const octokit = new github.GitHub(GITHUB_TOKEN)
             octokit.pulls.update({
               ...repository,
