Test deploy workflow

--- a/.github/workflows/deploy-workflow.yml
+++ b/.github/workflows/deploy-workflow.yml
@@ -32,3 +32,10 @@ jobs:
           echo "account_id=${ACCOUNT_ID}" >> "$GITHUB_OUTPUT"
         env:
           INPUT_ENVIRONMENT: ${{ inputs.environment }}
+  
+  print-output:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Print output
+        run: echo Account ID - ${{ needs.set-account-id.outputs.account_id }}
