--- a/.github/workflows/deploy-workflow.yml
+++ b/.github/workflows/deploy-workflow.yml
@@ -35,7 +35,7 @@ jobs:
   
   print-output:
     runs-on: ubuntu-latest
-
+    needs: set-account-id
     steps:
       - name: Print output
         run: echo Account ID - ${{ needs.set-account-id.outputs.account_id }}
