--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,4 +17,6 @@ jobs:
     steps:
       - name: Test workflow input
         run: |
-          echo "account-id - ${{ inputs.account-id }}"
+          echo "account-id - $INPUT_ACCOUNT-ID"
+        env:
+          INPUT_ACCOUNT-ID: ${{ inputs.account-id }}
