--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         
       - name: Get changed files
         run: |
-          files=$(git diff --name-only HEAD~1 HEAD)
+          files=$(git diff --name-only HEAD^ HEAD)
           has_change=$(echo "${files}" | grep ".github/[a-z]*flows" | wc -l)
           echo "has_change: ${has_change}"
         
