--- a/.github/workflows/pr-body-extract.yml
+++ b/.github/workflows/pr-body-extract.yml
@@ -2,7 +2,7 @@ name: Fetch PR body
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened, edited]
+    types: [opened, synchronize, reopened]
     branches: [master]
 
 jobs:
