--- a/.github/workflows/pr-body-extract.yml
+++ b/.github/workflows/pr-body-extract.yml
@@ -1,6 +1,8 @@
 name: Fetch PR body
 
 on:
+  pull_request_target:
+    types: [edited]
   pull_request:
     types: [opened, synchronize, reopened]
     branches: [master]
