--- a/.github/workflows/deploy-workflow.yml
+++ b/.github/workflows/deploy-workflow.yml
@@ -20,6 +20,7 @@ jobs:
 
     outputs:
       account_id: ${{ steps.determine_account_id.outputs.account_id }}
+      folders: ${{ steps.determine_account_id.outputs.folders }}
     steps:
       - name: Set account id
         id: determine_account_id
@@ -31,6 +32,7 @@ jobs:
              export ACCOUNT_ID=1234567890
           fi
           echo "account_id=${ACCOUNT_ID}" >> "$GITHUB_OUTPUT"
+          echo "folders=(f1 f2 f3)" >> "$GITHUB_OUPUT"
   
   print-output:
     runs-on: ubuntu-latest
@@ -40,6 +42,18 @@ jobs:
         run: |
           echo Account ID in set-account-id - ${{ github.event.inputs.environment }}
           echo Account ID from outputs - ${{ needs.set-account-id.outputs.account_id }}
+  
+  matrix-test:
+    runs-on: ubuntu-latest
+    needs: set-account-id
+    strategy:
+      matrix:
+        folder: [ join(needs.set-account-id.outputs.folders) ]
+    steps:
+      - name: Test matrix
+        run: |
+          echo "Folder: ${{ matrix.folder }}"
+    
 
   trigger-deployment-workflow:
     uses: ./.github/workflows/deploy.yml
