--- a/.github/workflows/deploy-workflow.yml
+++ b/.github/workflows/deploy-workflow.yml
@@ -33,7 +33,7 @@ jobs:
           fi
           echo "account_id=${ACCOUNT_ID}" >> "$GITHUB_OUTPUT"
           export arr=("f1" "f2" "f3")
-          echo "folders=${arr[@]}" >> "$GITHUB_OUPUT"
+          echo "matrix={\"include\":[\"folder1\", \"folder2\"]}" >> "$GITHUB_OUPUT"
   
   print-output:
     runs-on: ubuntu-latest
@@ -48,8 +48,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: set-account-id
     strategy:
-      matrix:
-        folder: [ join(needs.set-account-id.outputs.folders) ]
+      matrix: ${{ fromJSON(needs.set-account-id.outputs.folders) }}
     steps:
       - name: Test matrix
         run: |
