--- a/.github/workflows/matrix-tester.yml
+++ b/.github/workflows/matrix-tester.yml
@@ -8,11 +8,11 @@ jobs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
       - id: set-matrix
-        run: echo "matrix={\"include\":[{\"folder\":\"folder1\"},{\"folder\":\"folder2\"}]}" >> $GITHUB_OUTPUT
+        run: echo "matrix={\"include\":[{\"folder\":\"auth\"},{\"folder\":\"shell\"}]}" >> $GITHUB_OUTPUT
   job2:
     needs: job1
     runs-on: ubuntu-latest
     strategy:
       matrix: ${{ fromJSON(needs.job1.outputs.matrix) }}
     steps:
-      - run: echo "Folder - ${{ matrix.folder }}"
+      - run: echo "Project key - olrs-ui-${{ matrix.folder }}"
