--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
         run: |
           echo "files=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | xargs)"
           echo $(git diff-tree --no-commit-id --name-only --diff-filter=ACMRT -r HEAD^1 HEAD)
+          echo "commits - ${{ github.event.pull_request.commits }}"
          
       - name: Get commit and file info
         id: folder_check
