--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
 
           # Show only files from the PR with content filtered by specific git status (Added or Modified):
           git diff-tree --name-only --diff-filter=ACMRT -r \
-            --merge-base origin/${{ github.event.pull_request.base.ref }} ${{ github.event.pull_request.head.ref }}
+            --merge-base origin/${{ github.event.pull_request.base.ref }} origin/${{ github.event.pull_request.head.ref }}
       
       - name: Get changed files
         id: changes
