--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 name: Get commit and file info
 on:
   pull_request:
-    types: [opened, synchronized, edited, reopened]
+    types: [opened, synchronize, edited, reopened]
     branches: [ master ]
 
 jobs:
